@@ -12,10 +12,10 @@ SDL_INCLUDES=-I/boot/develop/tools/gnupro/include/SDL
 SDL_LIBS=-L/boot/develop/tools/gnupro/lib -lSDLmain -lSDL
 
 CPPFLAGS=-DVERSION=\"$(VERSION)\" -DBEOS -DDEBUG -DEXULT_DATADIR=\"data\" \
-	-I$(SRC)/imagewin -I$(SRC)/shapes \
+	-I$(SRC)/imagewin -I$(SRC)/shapes -I$(SRC)/data \
 	-I$(SRC)/files -I$(SRC) -I$(SRC)/audio -I$(SRC)/conf \
 	-I$(SRC)/gumps -I$(SRC)/objs -I$(SRC)/pathfinder -I$(SRC)/usecode \
-	$(SDL_INCLUDES)
+	-DHAVE_SNPRINTF $(SDL_INCLUDES)
 CXXFLAGS=-O2 -Wall
 
 LFLAGS=
